Added support for query and update of individual calls
