# controllers/DefaultService.js
@@ -1,13 +1,0 @@
-'use strict';
-
-exports.callbacksCallbackIdDELETE = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * callbackId (String)
-  **/
-  // no response value expected for this operation
-  
-  
-  res.end();
-}
-
